# sonic-buildimage

./: .artifactignore  .bazelignore  .bazelrc  .gitignore  .gitlab-ci-submodule-init.sh  .gitlab-ci.yml  .gitlab-express-runner.conf  .gitlab-mk-version.sh  .gitmodules  0001-Add-dhcp_l2-dhcpv6_l2-to-copp_cfg.json.patch  0001-add-48gt.patch  0001-sonic-kernel-modification-for-wistron.patch  0002-Add-dhcp_l2-dhcpv6_l2-to-copp-supported-list.patch  0002-ztp-workaround-mac-table-added.patch  0004-fix-xcvrd-entered-fatal-state.patch  0005-es1227-54ts-board-device-tree-fixes.patch  0006-watchdogutil.patch  0007-version_for_release.patch  0008-pmon-usb-mount-fix.patch  AGENTS.md  BUILD.bazel  CODEOWNERS  MINIGRAPH_GENERIC_HWSKU_COMPATIBILITY.md  MODULE.bazel  Makefile  Makefile.bazel.work  Makefile.cache  Makefile.work  NokiaSnmpBuildTimePatch.sh  README.buildsystem.md  README.md  README.pipeline-dependency.md  README.reproducible_mirrors.md  README.wistron.md  README_vpp.md  TEST_RESULTS_ISSUE_23323.md  apply_patches.sh  azure-pipelines.yml  build-syncd-rpc.sh  build.sh  (+37 more)
dockers/docker-base-bookworm/: BUILD.bazel  Dockerfile.j2
dockers/docker-bmp-watchdog/watchdog/: Cargo.toml
dockers/docker-syncd/: BUILD.bazel
dockers/docker-sysmgr/: BUILD.bazel  Dockerfile.j2
platform/broadcom/: brcm_sai_dev.BUILD  broadcom.MODULE.bazel  docker-saiserver-brcm.mk  docker-syncd-brcm-dnx-rpc.mk  docker-syncd-brcm-dnx.dep  docker-syncd-brcm-dnx.mk  docker-syncd-brcm-legacy-th-rpc.mk  docker-syncd-brcm-legacy-th.mk  docker-syncd-brcm-rpc.mk  docker-syncd-brcm.dep  docker-syncd-brcm.mk  libsaithrift-dev.mk  one-aboot.mk  one-image.mk  platform-modules-arista.mk  platform-modules-cel.mk  platform-modules-cls.dep  platform-modules-cls.mk  platform-modules-dell.mk  platform-modules-fs.dep  platform-modules-fs.mk  platform-modules-h3c.dep  platform-modules-h3c.mk  platform-modules-micas.mk  platform-modules-nexthop.dep  platform-modules-nexthop.mk  platform-modules-nokia.mk  platform-modules-ruijie.mk  platform-modules-supermicro.mk  rules.dep  rules.mk  sai-dnx.mk  sai-legacy.mk  sai-modules.dep  sai-modules.mk  sai-xgs.mk  sai.dep  sai.mk  sswsyncd.dep  sswsyncd.mk
platform/broadcom/docker-syncd-brcm/: Dockerfile.j2  Makefile
platform/broadcom/docker-syncd-brcm-dnx/: Dockerfile.j2
platform/broadcom/docker-syncd-brcm-dnx-rpc/: Dockerfile.j2
platform/broadcom/docker-syncd-brcm-legacy-th-rpc/: Dockerfile.j2
platform/broadcom/docker-syncd-brcm-rpc/: Dockerfile.j2
platform/broadcom/extra-debs/: arista-fwutil_1.0.1_amd64.deb
platform/broadcom/saibcm-modules.patch/: 0001-resolute-kernel-abi.patch  0002-linux-7.0-api-compat.patch  0003-linux-7.0-kbuild-shipped-obj.patch  0004-linux-7.0-objtool-noop.patch  0005-linux-7.0-kbuild-arch-tree.patch  0006-linux-7.0-kflags-fms-extensions.patch  0007-resolute-modules-install-path.patch  0008-resolute-changelog-timestamps.patch  series
platform/broadcom/sonic-platform-modules-arista.patch/: 0001-Lodoga-change-max-cpu-frequency-to-2GHz.patch  series
platform/broadcom/sonic-platform-modules-cls/: LICENSE  README.md  cel-ds1000  cel-ds2000  cel-ds3000  cel-silverstone-v2
platform/broadcom/sonic-platform-modules-micas/: .gitignore  LICENSE
platform/broadcom/sonic-platform-modules-nexthop/: .gitignore  pytest.ini  setup.py
platform/broadcom/sswsyncd/: Makefile  bcmcmd  bcmcmd.cpp  dsserve  dsserve.cpp  sswsyncd.dep  sswsyncd.mk
src/sonic-device-data/: BUILD.bazel  Makefile  generate_device_data.py
src/sonic-device-data/src/: generate_vs_hwsku.py  pai.vs_profile
src/sonic-device-data/tests/: hwsku_json_checker  media_checker  permitted_list  platform_json_checker
src/sonic-framework/: Makefile.am  configure  configure.ac
src/sonic-framework/rebootbackend/: Makefile.am  Makefile.in  gnoi_reboot.xml  gnoi_reboot_dbus.h  init_thread.h  interfaces.cpp  interfaces.h  reboot_common.h  reboot_interfaces.h  reboot_thread.cpp  reboot_thread.h  rebootbe.cpp  rebootbe.h  redis_utils.cpp  redis_utils.h
src/sonic-framework/tests/: Makefile.am  reboot_common_test.cpp  reboot_thread_test.cpp  rebootbe_test.cpp  redis_utils_test.cpp  test_main.cpp  test_utils_common.cpp
src/sonic-py-common/: BUILD.bazel  pyproject.toml  setup.py
src/sonic-py-common/sonic_py_common/: daemon_base.py  device_info.py  eeprom_utils.py  general.py  multi_asic.py  security_cipher.py  sidecar_common.py  syslogger.py
src/sonic-py-common/tests/: device_info_test.py  multi_asic_test.py  test_device_info_fallback.py  test_eeprom_utils.py  test_gnoi_client.py  test_gnoi_testing.py  test_security_cipher.py  test_sidecar_common.py  test_syslogger.py
src/sonic-supervisord-utilities-rs/: Cargo.toml
src/sonic-supervisord-utilities-rs/debian/: changelog  control  rules
src/sonic-supervisord-utilities-rs/src/: childutils.rs  lib.rs  proc_exit_listener.rs  supervisor_proc_exit_listener.rs
src/sonic-supervisord-utilities-rs/tests/: integration_tests.rs  test_listener.rs
src/sonic-sysmgr/: .bazelignore  BUILD.bazel  MODULE.bazel  Makefile.am  flags.bzl  libdbus_bin.BUILD
src/sonic-sysmgr/rebootbackend/: BUILD.bazel  proto_compat.h  reboot_thread.cpp  reboot_thread.h  rebootbe.cpp  rebootbe.h
src/sonic-sysmgr/tests/: BUILD.bazel
src/sonic-yang-mgmt/: BUILD.bazel  pyproject.toml  sonic-cfg-help  sonic_yang.py  sonic_yang_ext.py  sonic_yang_path.py
src/sonic-yang-mgmt/tests/: test_cfghelp.py
src/sonic-yang-models/: .bazelrc  .gitignore  BUILD.bazel  pyproject.toml  render_templates.py  setup.py
src/sonic-yang-models/doc/: Configuration.md
src/sonic-yang-models/platform-yang-templates/: sonic-buffer-profile-capability.yang.j2
src/sonic-yang-models/yang-models/: sonic-alarm.yang  sonic-ars.yang  sonic-asic-sensors.yang  sonic-audit.yang  sonic-auto_techsupport.yang  sonic-banner.yang  sonic-bfd-profile.yang  sonic-bgp-aggregate-address.yang  sonic-bgp-allowed-prefix.yang  sonic-bgp-bbr.yang  sonic-bgp-common.yang  sonic-bgp-device-global.yang  (+147 more)
src/syslog-counter/: Cargo.toml  Makefile
tools/bazel/: BUILD.bazel  gzip.bzl  snapshot_downloader.cfg  test_working_targets.sh
(+8543 files in other folders)
