module(name = "sonic-buildimage")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "tar.bzl", version = "0.10.5")
bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11.6")

# Dependencies from the local Bazel registry in tools/bazel/registry
bazel_dep(name = "rules_distroless", version = "0.0.0.commit-ebfd74a2e07b83235e064bb63ace98a1a5223e02")
bazel_dep(name = "sonic-sysmgr", version = "0.0.0", repo_name = "sonic_sysmgr")
bazel_dep(name = "sonic-swss-common", version = "0.0.0", repo_name = "sonic_swss_common")
bazel_dep(name = "libnl3", version = "3.7.0")
bazel_dep(name = "libyang3", version = "3.12.2")

toolchains = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains")
use_repo(toolchains, "bsd_tar_toolchains")

register_toolchains("@bsd_tar_toolchains//:all")

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = [
        "bookworm",
        "bookworm-updates",
    ],
    uris = ["https://snapshot.debian.org/archive/debian/20251001T023456Z"],
)
apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20251001T023456Z"],
)
apt.install(
    dependency_set = "bookworm",
    packages = [ # do not sort
        # for docker-sysmgr
        "libdbus-1-3",
        "libdbus-c++-1-0v5",
        "libprotobuf32",
    ],
    suites = [
        "bookworm",
        "bookworm-updates",
        "bookworm-security",
    ],
)
apt.lock(
    into = "packages.lock",
)
use_repo(apt, "bookworm")

# Import the Make-built base images so Bazel can convert them into the OCI `base`
# of leaf docker images.
local_archive = use_repo_rule("//tools/bazel/oci:local_archive.bzl", "local_archive")

local_archive(
    name = "config_engine_archive",
    archive = "//:target/docker-config-engine-bookworm.gz",
)
