module(name = "sonic-buildimage")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "tar.bzl", version = "0.10.5")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "pigz", version = "2.8")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11.6")

# Dependencies from the local Bazel registry in tools/bazel/registry
bazel_dep(name = "rules_distroless", version = "0.0.0.commit-ebfd74a2e07b83235e064bb63ace98a1a5223e02")
bazel_dep(name = "sonic-build-infra", version = "0.0.0", repo_name = "sonic_build_infra")
bazel_dep(name = "sonic-sysmgr", version = "0.0.0", repo_name = "sonic_sysmgr")
bazel_dep(name = "sonic-swss-common", version = "0.0.0", repo_name = "sonic_swss_common")

toolchains = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains")
use_repo(toolchains, "bsd_tar_toolchains")

register_toolchains("@bsd_tar_toolchains//:all")

# The actual dependencies are listed in src/sonic-build-infra/MODULE.bazel, and re-exported.
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
use_repo(apt, "trixie")
