load("@rules_distroless//distroless:defs.bzl", "flatten", "group", "passwd")

# Rdeps necessary to run $(LIBSWSSCOMMON).
# We don't want every target that depends on $(LIBSWSSCOMMON) to depend
# on these transitively, because we want to avoid including duplicate packages in layers.
# TODO(bazel-ready): Replace with a build graph when we have an automatic way to minimize layers.
flatten(
    name = "libswsscommon_rdeps",
    deduplicate = True,
    tars = [
        "@libnl3//:libnl-3_pkg",
        "@libnl3//:libnl-genl-3_pkg",
        "@libnl3//:libnl-route-3_pkg",
        "@libnl3//:libnl-nf-3_pkg",
        "@libnl3//:libnl-cli-3_pkg",
        "@libyang3//:libyang3_pkg",
    ],
    visibility = ["//:__subpackages__"],
)
