[build-system]
requires = ["setuptools<80", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "sonic-py-common"
version = "1.0"
requires-python = ">=3.11"
license = {text = "Apache 2.0"}
dependencies = [
    "natsort",
    "pyyaml",
]

# Note: redis-dump-load is excluded as it requires setuptools and is only
# needed for the sonic-db-dump/load console scripts which can be built separately

[dependency-groups]
build = [
    # Needed for Bazel
    "build",
    "setuptools",
]
