[package]
name = "docker-wait-any-rs"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[[bin]]
name = "docker-wait-any-rs"
path = "src/main.rs"

[dependencies]
bollard = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sonic-rs-common = { path = "../../../sonic-rs-common" }

[dev-dependencies]
serial_test = "1.0.0"

[lints]
workspace = true

[profile.test]
opt-level = 0
debug = true
lto = false
codegen-units = 1
incremental = false