[package]
name = "docker-wait-any-rs"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition.workspace = true

[[bin]]
name = "docker-wait-any-rs"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.77"
bollard = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
log = "0.4"
sonic-rs-common = { path = "../../../sonic-rs-common" }

[dev-dependencies]
serial_test = "1.0.0"
mockall = "0.11.0"

[lints]
workspace = true